Fix overlap
The projects were overlapping due to height being set on the
wrong elements. The issue was corrected by removing the height.
Now the project tiles are causing the div to expand to accomodate
the content no matter how much is added.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
@@ -79,7 +79,7 @@ header {
 
 #welcome-section,
 .profile-content {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -136,9 +136,6 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  /* -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -147,7 +144,7 @@ header {
 
 .project-content {
   width: 80%;
-  height: 50vh;
+  /* height: 50vh; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -229,7 +226,6 @@ footer p {
 }
 
 .centered {
-  /* margin: 0; */
   text-align: center;
 }
 
